manifests/backend.yml
apiVersion: v1
kind: Service
metadata:
  name: kh-backend
  labels:
    app: kh-backend
spec:
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  selector:
    app: kh-backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kh-backend
spec:
  selector:
    matchLabels:
      app: kh-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: kh-backend
    spec:
      containers:
        - name: kh-backend
          image: <registry-name>.azurecr.io/backend
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 50m
            limits:
              cpu: 100m
