manifests/rabbitmq.yml
apiVersion: v1
kind: Service
metadata:
  name: kh-rabbitmq
spec:
  ports:
    - port: 5672
      protocol: TCP
  selector:
    app: kh-rabbitmq
  type: ClusterIP
---
apiVersion: v1
kind: Pod
metadata:
  name: kh-rabbitmq
  labels:
    app: kh-rabbitmq
spec:
  volumes:
    - name: kh-rabbitmq-volume
      persistentVolumeClaim:
        claimName: kh-rabbitmq-volume
  containers:
    - name: kh-rabbitmq
      image: rabbitmq
      ports:
        - containerPort: 5672
      volumeMounts:
        - mountPath: "/var/lib/rabbitmq/mnesia"
          name: kh-rabbitmq-volume
